--- a/historiador-web/public/index.html
+++ b/historiador-web/public/index.html
@@ -14,15 +14,7 @@
       align-items: center;
     }
     .header-container {
-      max-width: 850px;
-      margin: 0 auto;
-      flex: 1;
-      padding: 0 15px;
-    }
-    @media screen and (min-width: 850px) {
-      .header-container {
-        padding: 0;
-      }
+      padding-left: 15px;
     }
   </style>
 </head>
